--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [isagani],
+  "keywords": [],
   "author": "isagani kunma",
   "license": "ISC",
   "description": "potang1na wag spam",
