--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "prefix": "/",
-  "ownerID": "100030880666720",
+  "prefix": "$",
+  "ownerID": "https://www.facebook.com/isaganikunma",
   "autoRestart": false,
   "autoGreet": false,
   "option": {
